# ntpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  lint-and-format.yml
ntpy/: __init__.py  enums.py  handlers.py  request.py  typing.py
ntpy/backends/: __init__.py  _base.py  inmemory.py  redis.py
tests/: conftest.py
tests/test_ntpy/: __init__.py  test_enums.py  test_handlers.py  test_request.py
tests/test_ntpy/test_backends/: __init__.py  test_inmemory.py  test_redis.py
