[project]
name = "ntpy"
version = "0.2.0"
description = "ntfy.sh wrapper for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1"]
authors = [{ name = "Ifechukwu Ogidi", email = "ogidiifechukwu6@gmail.com" }]

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "UP",
    "I",
    "T20",
    "ANN",
    "ASYNC",
    "S",
    "ICN",
    "PL",
    "RUF",
    "ERA",
    "D",
    "PT",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
length-sort = true
